--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "mongroup": "~1.2.0",
     "git-side-band-message": "0.0.1",
     "stdout": "0.0.2",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "getport": "~0.1.0"
   },
   "devDependencies": {
     "rimraf": "~2.2.5",
-    "seq": "~0.3.5"
+    "seq": "~0.3.5",
+    "mkdirp": "~0.3.5"
   },
   "repository": {
     "type": "git",
