--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "stdout": "0.0.2",
     "mkdirp": "~0.3.5",
     "getport": "~0.1.0",
-    "basic": "~0.0.1"
+    "basic": "~0.0.1",
+    "through": "~2.3.4"
   },
   "devDependencies": {
     "rimraf": "~2.2.5",
