--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mkdirp": "~0.3.5",
     "getport": "~0.1.0",
     "basic": "~0.0.1",
-    "through": "~2.3.4"
+    "through": "~2.3.4",
+    "nginx-conf": "~0.1.0"
   },
   "devDependencies": {
     "rimraf": "~2.2.5",
