--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taco",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "work in progress deployment thingy",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "basic": "~0.0.1",
     "through": "~2.3.4",
     "nginx-conf": "~0.1.0",
-    "git-http-backend": "maxogden/git-http-backend#test"
+    "git-http-backend": "~0.1.1"
   },
   "devDependencies": {
     "rimraf": "~2.2.5",
