--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taco",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "a taco themed PaaS for node.js servers",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,8 @@
     "through": "~2.3.4",
     "nginx-conf": "~0.1.0",
     "git-http-backend": "~0.1.1",
-    "debug": "~0.7.4"
+    "debug": "~0.7.4",
+    "read-dir-files": "~0.1.1"
   },
   "devDependencies": {
     "rimraf": "~2.2.5",
