--- a/mongroup.conf
+++ b/mongroup.conf
@@ -2,4 +2,4 @@ description 'mongroup start'
 author 'maxogden'
 start on runlevel [0123456]
 task
-exec start-stop-daemon --start -u root --chdir /root --exec /usr/bin/env mongroup start
+exec start-stop-daemon --start -u $USER --chdir $USER_HOME --exec /usr/bin/env mongroup start
