--- a/package.json
+++ b/package.json
@@ -1,36 +1,19 @@
 {
   "name": "taco",
   "version": "1.6.0",
-  "description": "a taco themed PaaS for node.js servers",
+  "description": "a taco themed modular deployment system for unix",
   "main": "index.js",
   "scripts": {
     "test": "DEBUG=taco node test/test.js"
   },
   "bin": {
-    "install-taco-on-ubuntu": "install.js",
     "taco": "cli.js"
   },
   "author": "max ogden",
   "license": "BSD",
   "dependencies": {
-    "nginx-vhosts": "~0.0.2",
-    "mongroup": "~1.2.0",
-    "mkdirp": "~0.3.5",
-    "getport": "~0.1.0",
-    "basic": "~0.0.1",
-    "through": "~2.3.4",
-    "nginx-conf": "~0.1.0",
-    "git-http-backend": "~0.1.1",
-    "debug": "~0.7.4",
-    "read-dir-files": "~0.1.1"
   },
   "devDependencies": {
-    "rimraf": "~2.2.5",
-    "seq": "~0.3.5",
-    "mkdirp": "~0.3.5",
-    "tape": "~2.3.2",
-    "stdout": "0.0.2",
-    "request": "~2.33.0"
   },
   "repository": {
     "type": "git",
